# TeenyReason

./: .gitignore  AGENTS.md  README.md  continuous_cartpole.py  envs.py  main.py  notes.txt  play_probe_policy.py  ppo_core.py  probe_data.py  probe_latent.py  probe_ppo.py  pyproject.toml  run_multidomain_suite.py  serve_latent_dashboard.py  test.py  world_model.py
artifacts/: baseline_actor_critic_returns.npy  baseline_dqn_returns.npy  bipedal_walker_ppo_baseline_ppo_returns.npy  bipedal_walker_ppo_encoder_state_dict.pt  bipedal_walker_ppo_probe_ppo_returns.npy  continuous_lunar_lander_ppo_baseline_ppo_returns.npy  continuous_lunar_lander_ppo_encoder_state_dict.pt  continuous_lunar_lander_ppo_probe_ppo_returns.npy  continuous_lunar_lander_ppo_solve_benchmark.npz  dqn_returns.npy  encoder_state_dict.pt  probe_actor_critic_returns.npy  probe_dqn_returns.npy  randomized_cartpole_baseline_dqn_returns.npy  randomized_cartpole_encoder_state_dict.pt  randomized_cartpole_probe_dqn_returns.npy  randomized_cartpole_solve_benchmark.npz  randomized_continuous_cartpole_baseline_dqn_returns.npy  randomized_continuous_cartpole_encoder_state_dict.pt  randomized_continuous_cartpole_ppo_baseline_ppo_returns.npy  randomized_continuous_cartpole_ppo_encoder_state_dict.pt  randomized_continuous_cartpole_ppo_probe_ppo_returns.npy  randomized_continuous_cartpole_ppo_solve_benchmark.npz  randomized_continuous_cartpole_probe_dqn_returns.npy  randomized_continuous_cartpole_solve_benchmark.npz
docs/: README.md  agent_guide.md  architecture_and_training.md  benchmark_harness.md  core_idea.md  (+15 more)
(+424 files in other folders)
